# genetic_algorithm

./: CMakeLists.txt  Doxyfile  LICENSE.md  README.md  toolchain.cmake
docs/html/: index.html
include/: CCircuit.h  CSimulator.h  CUnit.h  Genetic_Algorithm.h
model_analysis/: hyper_parameter.ipynb
src/: CCircuit.cpp  CMakeLists.txt  CSimulator.cpp  Genetic_Algorithm.cpp  graph.py  main.cpp
tests/: CMakeLists.txt  test_GA.cpp  test_simulator.cpp  test_validity.cpp
